@@ -627,6 +627,39 @@ public class PlayerData extends StdWebMacro
 				str.append("<OPTION VALUE=F "+((old.equalsIgnoreCase("F"))?"SELECTED":"")+">F");
 				str.append("<OPTION VALUE=N "+((old.equalsIgnoreCase("N"))?"SELECTED":"")+">N");
 			}
+			if(parms.containsKey("FLAGS"))
+			{
+				final String old=httpReq.getUrlParameter("FLAGS");
+				List<String> set=null;
+				if(old==null)
+				{
+					if (M.playerStats() != null)
+					{
+						final String matList=M.playerStats().getStat("FLAGS");
+						set=CMParms.parseCommas(matList,true);
+					}
+				}
+				else
+				{
+					String id="";
+					set=new Vector<String>();
+					for(int i=0;httpReq.isUrlParameter("FLAG"+id);id=""+(++i))
+						set.add(httpReq.getUrlParameter("FLAG"+id));
+				}
+				if(parms.containsKey("READONLY"))
+					str.append(CMParms.toListString(set));
+				else
+				{
+					for (final PlayerStats.PlayerFlag element : PlayerStats.PlayerFlag.values())
+					{
+						str.append("<OPTION VALUE=\""+element.name()+"\"");
+						if(set.contains(element.name()))
+							str.append(" SELECTED");
+						str.append(">"+CMStrings.capitalizeAndLower(element.name()));
+					}
+				}
+				str.append(", ");
+			}
 			if(parms.containsKey("PLAYERCLANRESET"))
 				httpReq.removeUrlParameter("CLAN");
 			else
